# Storyloop

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PLAN.md  README.md  ROADMAP.md  SECURITY.md  SETUP_OAUTH.md  THIRD_PARTY_NOTICES.md  good-code-rubric.md  mypy.ini
backend/: README.md  main.py  pyproject.toml
backend/.mypy_cache/3.11/: _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _csv.data.json  _csv.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  _pickle.data.json  _pickle.meta.json  _queue.data.json  _queue.meta.json  _sitebuiltins.data.json  _sitebuiltins.meta.json  _weakrefset.data.json  _weakrefset.meta.json  abc.data.json  abc.meta.json  ag_ui.data.json  ag_ui.meta.json  ast.data.json  ast.meta.json  binascii.data.json  binascii.meta.json  builtins.data.json  builtins.meta.json  (+78 more)
backend/app/: __init__.py  config.py  db.py  dependencies.py  main.py  scheduler.py  schema.py
backend/app/db_helpers/: __init__.py  conversations.py
backend/app/models/: __init__.py  feed_entries.py
backend/app/prompts/: loopie.prompt.md  smart_entry.prompt.md
backend/app/routers/: __init__.py  agent.py  agents.py  assets.py  channel.py  chatkit.py  conversations.py  dictation.py  entries.py  errors.py  growth.py  guards.py  health.py  settings.py  speech.py  youtube.py  youtube_account.py  youtube_auth.py  youtube_presenters.py
backend/app/services/: __init__.py  agent.py  agent_client.py  ai_runtime.py  assets.py  base.py  channel_profile.py  channel_profile_advice.py  chatkit.py  content_export.py  dictation.py  entries.py  growth.py  growth_demo.py  model_backends.py  model_settings.py  sgi.py  tags.py  (+14 more)
backend/tests/: conftest.py  test_entries.py  test_entries_router.py  test_entry_service.py  test_health.py  test_main.py  test_youtube_router.py  test_youtube_service.py
cloudflare/: .dev.vars.example  pyproject.toml  wrangler.jsonc
cloudflare/migrations/: 0001_init.sql  0002_core_schema.sql
cloudflare/src/: entry.py
(+820 files in other folders)
