[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "storyloop-backend"
version = "0.1.0"
description = "Storyloop FastAPI backend boilerplate"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11.8"
dependencies = [
    "apscheduler>=3.11.0",
    "asyncache>=0.3.1",
    "cachetools>=5.3.3",
    "fastapi>=0.120.0",
    "google-api-python-client>=2.186.0",
    "google-auth-oauthlib>=1.2.3",
    "griffelib>=2.0.0,<2.1",
    "httpx>=0.28.1",
    "logfire>=4.14.2",
    "pydantic>=2.12.3",
    "pydantic-ai>=0.0.14",
    "pillow>=11.0.0",
    "pypdf>=5.2.0",
    "python-dotenv>=1.1.1",
    "sse-starlette>=2.2.0",
    "sqlite-utils>=3.38",
    "uvicorn[standard]>=0.38.0",
    "promptdown>=1.1.6",
    "werkzeug>=3.1.6",
]

[dependency-groups]
ci = [
    "coverage>=7.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.2",
]

dev = [
    "coverage>=7.11.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = [
    "apscheduler.*",
    "asyncache",
    "cachetools",
    "googleapiclient.*",
    "google_auth_oauthlib.*",
]
ignore_missing_imports = true
