[project]
name = "storyloop-cloudflare-worker"
version = "0.1.0"
description = "Cloudflare runtime project for Storyloop"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "workers-py>=0.0.24",
    "workers-runtime-sdk>=0.0.19",
]
